<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn9"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="169dp"
        android:text="@string/_9" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="169dp"
        android:layout_toEndOf="@+id/btn9"
        android:layout_toRightOf="@+id/btn9"
        android:text="@string/_8" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="169dp"
        android:layout_toEndOf="@+id/btn8"
        android:layout_toRightOf="@+id/btn8"
        android:text="@string/_7" />

    <Button
        android:id="@+id/btndiv"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="169dp"
        android:layout_toEndOf="@+id/btn7"
        android:layout_toRightOf="@id/btn7"
        android:text="/" />


    <Button
        android:id="@+id/btn6"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="250dp"
        android:text="@string/_6" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="250dp"
        android:layout_toEndOf="@+id/btn9"
        android:layout_toRightOf="@+id/btn9"
        android:text="@string/_5" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="250dp"
        android:layout_toEndOf="@+id/btn8"
        android:layout_toRightOf="@+id/btn8"
        android:text="@string/_4" />

    <Button
        android:id="@+id/btntimes"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:layout_toEndOf="@+id/btn4"
        android:layout_toRightOf="@id/btn4"
        android:text="@string/x" />


    <Button
        android:id="@+id/btn1"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="330dp"
        android:text="@string/_1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="330dp"
        android:layout_toEndOf="@+id/btn1"
        android:layout_toRightOf="@+id/btn1"
        android:text="@string/_2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="330dp"
        android:layout_toEndOf="@+id/btn2"
        android:layout_toRightOf="@+id/btn2"
        android:text="@string/_3" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="330dp"
        android:layout_toEndOf="@+id/btn3"
        android:layout_toRightOf="@id/btn3"
        android:text="+" />


    <Button
        android:id="@+id/btnclear"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="410dp"
        android:text="@string/clear" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="410dp"
        android:layout_toEndOf="@+id/btnclear"
        android:layout_toRightOf="@+id/btnclear"
        android:text="@string/_0" />

    <Button
        android:id="@+id/btnequal"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="410dp"
        android:layout_toEndOf="@+id/btn0"
        android:layout_toRightOf="@+id/btn0"
        android:text="=" />

    <Button
        android:id="@+id/btnsub"
        android:layout_width="76dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="410dp"
        android:layout_toEndOf="@+id/btnequal"
        android:layout_toRightOf="@id/btnequal"
        android:text="-" />

    <TextView
        android:id="@+id/tvDisplay"
        android:layout_width="305dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/btn9"
        android:layout_alignLeft="@id/btn9"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="305dp"
        android:layout_height="51dp"
        android:layout_alignStart="@+id/btn9"
        android:layout_alignLeft="@id/btn9"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
       />

</RelativeLayout>